--- a/about.html
+++ b/about.html
@@ -61,8 +61,9 @@
                     <div>
                         <h4 class="text-primary">About Me</h4>
                         <h1 class="display-5 mb-4">Mechanical Design Engineer</h1>
-                        <p class="mb-5">I was born and raised in Far Western Part of Nepal where I grew up in small village and always had good music playing at home.
-                            These threads of family, cricket, and music have defined my life path and experience. I have completed my bachelor in Mechanical Engineering from government university Thapathali Campus. I am a passionate Mechanical Engineer. I have **1 year of work-experience** in real world industry. I am proficient in SolidWorks and Python Programming language.
+                        <p class="mb-5">I was born and raised in the Far Western region of Nepal, where I grew up in a small village surrounded by the sounds of good music and the warmth of family. These threads of family, cricket, and music have shaped my life and continue to inspire me today.
+
+I completed my Bachelor’s degree in Mechanical Engineering from Thapathali Campus, a government university in Nepal. I am a passionate Mechanical Engineer with one year of hands-on industry experience. I’m proficient in SolidWorks and Python programming, and I enjoy applying my technical skills to create innovative and practical solutions.
                         </p>
                         <div class="row g-4">
                             <div class="col-md-6">
