--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                             <div class="text-start">
                                 <h4 class="text-primary text-uppercase fw-bold mb-4">Welcome Everyone!!</h4>
                                 <h1 class="display-4 text-uppercase text-white mb-4">Hello It's me Gaurab Badu.</h1>
-                                <p class="mb-4 fs-5">A passionate mechanical Engineer.</p>
+                                <p class="mb-4 fs-5">A passionate mechanical Engineer and a robotic enthusiast.</p>
                             </div>
                         </div>
                     </div>
