--- a/index.html
+++ b/index.html
@@ -171,6 +171,7 @@
             <div class="col-md-6 wow fadeInUp" data-wow-delay="0.2s">
                 <div class="gallery-item">
                     <img src="img/ran.jpg" class="img-fluid rounded w-100 h-100" alt="ran">
+                     <p class="mb-0"> International AI Conference</p>
                     <div class="search-icon">
                         <a href="img/ran.jpg" class="btn btn-light btn-lg-square rounded-circle" data-lightbox="Gallery-1"><i class="fas fa-search-plus"></i></a>
                     </div>
