--- a/index.html
+++ b/index.html
@@ -212,6 +212,9 @@
             <div class="col-md-6 wow fadeInUp" data-wow-delay="0.6s">
                 <div class="gallery-item">
                     <img src="img/chitwan.jpeg" class="img-fluid rounded w-100 h-100" alt="NYC">
+                    <div class="overlay-text position-absolute top-50 start-50 translate-middle text-white fw-bold text-center">
+      <h5>Banana FIber Training</h5>
+    </div>
                     <div class="search-icon">
                         <a href="img/chitwan.jpeg" class="btn btn-light btn-lg-square rounded-circle" data-lightbox="Gallery-6"><i class="fas fa-search-plus"></i></a>
                     </div>
