--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
             <div class="col-md-6 wow fadeInUp" data-wow-delay="0.6s">
                 <div class="gallery-item">
                     <img src="img/chitwan.jpeg" class="img-fluid rounded w-100 h-100" alt="NYC">
-                    <div class="overlay-text position-absolute top-0 start-50 translate-middle-x text-black fw-bold text-center w-100">
+                    <div class="overlay-text position-absolute bottom-10 start-50 translate-middle-x text-black fw-bold text-center w-100">
                       <h5>Banana FIber Training</h5>
                     </div>
                     <div class="search-icon">
