--- a/index.html
+++ b/index.html
@@ -172,6 +172,9 @@
                 <div class="gallery-item">
                     <img src="img/ran.jpg" class="img-fluid rounded w-100 h-100" alt="ran">
                      <p class="mb-0"> International AI Conference</p>
+                    <div class="overlay-text position-absolute bottom-10 start-50 translate-middle-x text-black fw-bold text-center w-100">
+                      <h5>International AI Conference-2024</h5>
+                    </div>
                     <div class="search-icon">
                         <a href="img/ran.jpg" class="btn btn-light btn-lg-square rounded-circle" data-lightbox="Gallery-1"><i class="fas fa-search-plus"></i></a>
                     </div>
