--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
             <div class="col-md-6 wow fadeInUp" data-wow-delay="0.2s">
                 <div class="gallery-item">
                     <img src="img/ran.jpg" class="img-fluid rounded w-100 h-100" alt="ran">
-                <div class="overlay-text position-absolute top-0 start-50 translate-middle-x text-black fw-bold text-center w-100">
+                <div class="overlay-text position-absolute top-0 start-50 translate-middle-x text-blue fw-bold text-center w-100">
                       <div class="text-box fw-bold">
                           International AI Conference-2024 </div>
                 </div>
@@ -183,6 +183,10 @@
             <div class="col-md-3 wow fadeInUp" data-wow-delay="0.4s">
                 <div class="gallery-item">
                     <img src="img/IMG_0956.JPG" class="img-fluid rounded w-100 h-100" alt="IMG_0956.JPG">
+                    <div class="overlay-text position-absolute top-0 start-50 translate-middle-x text-blue fw-bold text-center w-100">
+                      <div class="text-box fw-bold">
+                          International AI Conference-2024 </div>
+                </div>
                     <div class="search-icon">
                         <a href="img/IMG_0956.JPG" class="btn btn-light btn-lg-square rounded-circle" data-lightbox="Gallery-2"><i class="fas fa-search-plus"></i></a>
                     </div>
@@ -191,6 +195,10 @@
             <div class="col-md-3 wow fadeInUp" data-wow-delay="0.6s">
                 <div class="gallery-item">
                     <img src="img/school.jpg" class="img-fluid rounded w-100 h-100" alt="school">
+                    <div class="overlay-text position-absolute top-0 start-50 translate-middle-x text-blue fw-bold text-center w-100">
+                      <div class="text-box fw-bold">
+                          Teaching Robotics at School </div>
+                </div>
                     <div class="search-icon">
                         <a href="img/school.jpg" class="btn btn-light btn-lg-square rounded-circle" data-lightbox="Gallery-3"><i class="fas fa-search-plus"></i></a>
                     </div>
@@ -199,6 +207,10 @@
             <div class="col-md-6 wow fadeInUp" data-wow-delay="0.6s">
                 <div class="gallery-item">
                     <img src="img/banana.jpg" class="img-fluid rounded w-100 h-100" alt="banana">
+                    <div class="overlay-text position-absolute top-0 start-50 translate-middle-x text-blue fw-bold text-center w-100">
+                      <div class="text-box fw-bold">
+                          Event at RAN</div>
+                </div>
                     <div class="search-icon">
                         <a href="img/banana.png" class="btn btn-light btn-lg-square rounded-circle" data-lightbox="Gallery-6"><i class="fas fa-search-plus"></i></a>
                     </div>
@@ -207,6 +219,10 @@
             <div class="col-md-6 wow fadeInUp" data-wow-delay="0.6s">
                 <div class="gallery-item">
                     <img src="img/NYC.png" class="img-fluid rounded w-100 h-100" alt="NYC">
+                    <div class="overlay-text position-absolute top-0 start-50 translate-middle-x text-blue fw-bold text-center w-100">
+                      <div class="text-box fw-bold">
+                          National Youth Council Event-2024 </div>
+                </div>
                     <div class="search-icon">
                         <a href="img/NYC.png" class="btn btn-light btn-lg-square rounded-circle" data-lightbox="Gallery-6"><i class="fas fa-search-plus"></i></a>
                     </div>
