--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
             <div class="col-md-3 wow fadeInUp" data-wow-delay="0.4s">
                 <div class="gallery-item">
                     <img src="img/IMG_0956.JPG" class="img-fluid rounded w-100 h-100" alt="IMG_0956.JPG">
-                    <div class="overlay-text position-absolute top-0 start-50 translate-middle-x text-blue fw-bold text-center w-100">
+                    <div class="overlay-text position-absolute top-0 start-50 translate-middle-x text-primary fw-bold text-center w-100">
                       <div class="text-box fw-bold">
                           International AI Conference-2024 </div>
                 </div>
