--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
             <div class="col-md-3 wow fadeInUp" data-wow-delay="0.6s">
                 <div class="gallery-item">
                     <img src="img/school.jpg" class="img-fluid rounded w-100 h-100" alt="school">
-                    <div class="overlay-text position-absolute top-0 start-50 translate-middle-x text-blue fw-bold text-center w-100">
+                    <div class="overlay-text position-absolute top-0 start-50 translate-middle-x text-primary fw-bold text-center w-100">
                       <div class="text-box fw-bold">
                           Teaching Robotics at School </div>
                 </div>
@@ -207,7 +207,7 @@
             <div class="col-md-6 wow fadeInUp" data-wow-delay="0.6s">
                 <div class="gallery-item">
                     <img src="img/banana.jpg" class="img-fluid rounded w-100 h-100" alt="banana">
-                    <div class="overlay-text position-absolute top-0 start-50 translate-middle-x text-blue fw-bold text-center w-100">
+                    <div class="overlay-text position-absolute top-0 start-50 translate-middle-x text-primary fw-bold text-center w-100">
                       <div class="text-box fw-bold">
                           Event at RAN</div>
                 </div>
@@ -219,7 +219,7 @@
             <div class="col-md-6 wow fadeInUp" data-wow-delay="0.6s">
                 <div class="gallery-item">
                     <img src="img/NYC.png" class="img-fluid rounded w-100 h-100" alt="NYC">
-                    <div class="overlay-text position-absolute top-0 start-50 translate-middle-x text-blue fw-bold text-center w-100">
+                    <div class="overlay-text position-absolute top-0 start-50 translate-middle-x text-primary fw-bold text-center w-100">
                       <div class="text-box fw-bold">
                           National Youth Council Event-2024 </div>
                 </div>
@@ -231,9 +231,10 @@
             <div class="col-md-6 wow fadeInUp" data-wow-delay="0.6s">
                 <div class="gallery-item">
                     <img src="img/chitwan.jpeg" class="img-fluid rounded w-100 h-100" alt="NYC">
-                     <div class="overlay-text position-absolute bottom-0 start-50 translate-middle-x text-black fw-bold text-center w-100">
-                      <h5>Banana Fiber Training</h5>
-                    </div>
+                     <div class="overlay-text position-absolute top-0 start-50 translate-middle-x text-primary fw-bold text-center w-100">
+                      <div class="text-box fw-bold">
+                          Banana Fiber Training </div>
+                </div>
                     <div class="search-icon">
                         <a href="img/chitwan.jpeg" class="btn btn-light btn-lg-square rounded-circle" data-lightbox="Gallery-6"><i class="fas fa-search-plus"></i></a>
                     </div>
