--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
             <div class="col-md-6 wow fadeInUp" data-wow-delay="0.2s">
                 <div class="gallery-item">
                     <img src="img/ran.jpg" class="img-fluid rounded w-100 h-100" alt="ran">
-                <div class="overlay-text position-absolute top-0 start-50 translate-middle-x text-blue fw-bold text-center w-100">
+                <div class="overlay-text position-absolute top-0 start-50 translate-middle-x text-primary fw-bold text-center w-100">
                       <div class="text-box fw-bold">
                           International AI Conference-2024 </div>
                 </div>
