--- a/index.html
+++ b/index.html
@@ -195,7 +195,8 @@
             <div class="col-md-3 wow fadeInUp" data-wow-delay="0.6s">
                 <div class="gallery-item">
                     <img src="img/school.jpg" class="img-fluid rounded w-100 h-100" alt="school">
-                    <div class="overlay-text position-absolute top-0 start-50 translate-middle-x text-primary fw-bold text-center w-100">
+                    <div class="overlay-text position-absolute top-0 start-50 translate-middle-x text-primary fw-bold text-center w-100 border: 2px solid black" 
+                        style="border: 2px solid black; padding: 5px 10px; border-radius: 5px; display: inline-block; background-color: transparent;">
                       <div class="text-box fw-bold">
                           Teaching Robotics at School </div>
                 </div>
