--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                 <div class="gallery-item">
                     <img src="img/school.jpg" class="img-fluid rounded w-100 h-100" alt="school">
                     <div class="overlay-text position-absolute top-0 start-50 translate-middle-x text-primary fw-bold text-center w-100 border: 2px solid black" 
-                        style="border: 2px solid black; padding: 5px 10px; border-radius: 5px; display: inline-block; background-color: transparent;">
+                        style="border: 2px solid black; padding: 5px 10px; border-radius: 5px; display: inline-block; background-color: black;">
                       <div class="text-box fw-bold">
                           Teaching Robotics at School </div>
                 </div>
