--- a/index.html
+++ b/index.html
@@ -171,7 +171,8 @@
             <div class="col-md-6 wow fadeInUp" data-wow-delay="0.2s">
                 <div class="gallery-item">
                     <img src="img/ran.jpg" class="img-fluid rounded w-100 h-100" alt="ran">
-                <div class="overlay-text position-absolute top-0 start-50 translate-middle-x text-primary fw-bold text-center w-100">
+                <div class="overlay-text position-absolute top-0 start-50 translate-middle-x text-primary fw-bold text-center w-100 border: 2px solid black" 
+                        style="border: 2px solid black; padding: 5px 10px; border-radius: 5px; display: inline-block; background-color: black;">
                       <div class="text-box fw-bold">
                           International AI Conference-2024 </div>
                 </div>
@@ -183,7 +184,8 @@
             <div class="col-md-3 wow fadeInUp" data-wow-delay="0.4s">
                 <div class="gallery-item">
                     <img src="img/IMG_0956.JPG" class="img-fluid rounded w-100 h-100" alt="IMG_0956.JPG">
-                    <div class="overlay-text position-absolute top-0 start-50 translate-middle-x text-primary fw-bold text-center w-100">
+                    <div class="overlay-text position-absolute top-0 start-50 translate-middle-x text-primary fw-bold text-center w-100 border: 2px solid black" 
+                        style="border: 2px solid black; padding: 5px 10px; border-radius: 5px; display: inline-block; background-color: black;">
                       <div class="text-box fw-bold">
                           International AI Conference-2024 </div>
                 </div>
@@ -208,7 +210,8 @@
             <div class="col-md-6 wow fadeInUp" data-wow-delay="0.6s">
                 <div class="gallery-item">
                     <img src="img/banana.jpg" class="img-fluid rounded w-100 h-100" alt="banana">
-                    <div class="overlay-text position-absolute top-0 start-50 translate-middle-x text-primary fw-bold text-center w-100">
+                    <div class="overlay-text position-absolute top-0 start-50 translate-middle-x text-primary fw-bold text-center w-100 border: 2px solid black" 
+                        style="border: 2px solid black; padding: 5px 10px; border-radius: 5px; display: inline-block; background-color: black;">
                       <div class="text-box fw-bold">
                           Event at RAN</div>
                 </div>
@@ -220,7 +223,8 @@
             <div class="col-md-6 wow fadeInUp" data-wow-delay="0.6s">
                 <div class="gallery-item">
                     <img src="img/NYC.png" class="img-fluid rounded w-100 h-100" alt="NYC">
-                    <div class="overlay-text position-absolute top-0 start-50 translate-middle-x text-primary fw-bold text-center w-100">
+                    <div class="overlay-text position-absolute top-0 start-50 translate-middle-x text-primary fw-bold text-center w-100 border: 2px solid black" 
+                        style="border: 2px solid black; padding: 5px 10px; border-radius: 5px; display: inline-block; background-color: black;">
                       <div class="text-box fw-bold">
                           National Youth Council Event-2024 </div>
                 </div>
@@ -232,7 +236,8 @@
             <div class="col-md-6 wow fadeInUp" data-wow-delay="0.6s">
                 <div class="gallery-item">
                     <img src="img/chitwan.jpeg" class="img-fluid rounded w-100 h-100" alt="NYC">
-                     <div class="overlay-text position-absolute top-0 start-50 translate-middle-x text-primary fw-bold text-center w-100">
+                     <div class="overlay-text position-absolute top-0 start-50 translate-middle-x text-primary fw-bold text-center w-100 border: 2px solid black" 
+                        style="border: 2px solid black; padding: 5px 10px; border-radius: 5px; display: inline-block; background-color: black;">
                       <div class="text-box fw-bold">
                           Banana Fiber Training </div>
                 </div>
