--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                      <div class="overlay-text position-absolute top-0 start-50 translate-middle-x text-primary fw-bold text-center w-100 border: 2px solid black" 
                         style="border: 2px solid black; padding: 5px 10px; border-radius: 5px; display: inline-block; background-color: black;">
                       <div class="text-box fw-bold">
-                          Banana Fiber Training </div>
+                          Banana Fiber Training-Chitwan District-UNDP Nepal </div>
                 </div>
                     <div class="search-icon">
                         <a href="img/chitwan.jpeg" class="btn btn-light btn-lg-square rounded-circle" data-lightbox="Gallery-6"><i class="fas fa-search-plus"></i></a>
