--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <div class="header-carousel owl-carousel">
         <div class="header-carousel-item">
             <img src="img/try.JPG" class="img-fluid w-100" alt="Image">
-            <div class="carousel-caption">
+            <div class="carousel-caption" style="background-color: rgba(0, 0, 0, 0.7); padding: 20px; border-radius: 10px;">
                 <div class="container align-items-center py-4">
                     <div class="row g-5 align-items-center">
                         <div class="col-xl-7 fadeInLeft animated" data-animation="fadeInLeft" data-delay="1s" style="animation-delay: 1s;">
