--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <div class="container align-items-center py-4">
                     <div class="row g-5 align-items-center">
                         <div class="col-xl-7 fadeInLeft animated" data-animation="fadeInLeft" data-delay="1s" style="animation-delay: 1s;">
-                            <div class="text-start">
+                            <div class="text-start" style="background-color: #0D6EFD; padding: 20px; border-radius: 5px;">
                                 <h4 class="text-primary text-uppercase fw-bold mb-4">Welcome Everyone!!</h4>
                                 <h1 class="display-4 text-uppercase text-white mb-4">Hello It's me Gaurab Badu.</h1>
                                 <p class="mb-4 fs-5">A passionate mechanical Engineer and a robotic enthusiast.</p>
