--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             </div>
         </div>
     </div>
-    <div class="bg-light" style="padding-top: 100px; padding-bottom: 50px; font-weight: bold;">
+    <div class="bg-primary" style="padding-top: 100px; padding-bottom: 50px; font-weight: bold;">
     <div class="container py-5 text-center">
         <h2 class="btn btn-primary rounded-pill py-2 px-4 flex-shrink-0" style="font-weight: bold;" >Skills</h2>
         <p class="text-danger mb-4">Explore my skills below.</p>
