--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
         </div>
     </div>
 </div>
-<div class="container-fluid gallery pb-5 bg-light">
+<div class="container-fluid gallery pb-5 bg-primary">
     <div class="container pb-5">
         <div class="text-center mx-auto pb-5 wow fadeInUp" data-wow-delay="0.2s" style="max-width: 800px;">
             <h4 class="text-primary">Gallery</h4>
