--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <div class="container align-items-center py-4">
                     <div class="row g-5 align-items-center">
                         <div class="col-xl-7 fadeInLeft animated" data-animation="fadeInLeft" data-delay="1s" style="animation-delay: 1s;">
-    <div class="text-start bg-dark" style="background-color: rgba(0, 0, 0, 0.5); padding: 30px; border-radius: 10px; max-width: 450px; margin: 0 auto;">
+    <div class="text-start carousel-textbox" >
         <h4 class="text-primary text-uppercase fw-bold mb-4">Welcome Everyone!!</h4>
         <h1 class="display-4 text-uppercase text-white mb-4">Hello It's me Gaurab Badu.</h1>
         <p class="mb-4 fs-5 text-white">A passionate mechanical Engineer and a robotic enthusiast.</p>
