--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
         <div class="text-center mx-auto pb-5 wow fadeInUp" data-wow-delay="0.2s" style="max-width: 800px;">
             <h4 class="text-primary">Gallery</h4>
             <h1 class="display-5 mb-4">Captured Moments </h1>
-            <p class="mb-0"> These are the photos from the events I have atended. International AI Conference, National Youth Council</p>
+            <p class="mb-0"> These are the photos from the events I have atended. International AI Conference, National Youth Council, Banana Fiber Training Program.</p>
         </div>
         <div class="row g-4">
             <div class="col-md-6 wow fadeInUp" data-wow-delay="0.2s">
