--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
         </nav>
     </div>
     
-    <div class="container-fluid about pb-5">
+    <div class="container-fluid about pb-5" style="background-color: #1a1a1a;">
         <div class="container pb-5">
             <div class="row g-5">
                 <div class="col-xl-6 wow fadeInUp" data-wow-delay="0.2s">
