--- a/projects.html
+++ b/projects.html
@@ -87,28 +87,34 @@
 
         <!-- SolidWorks Projects -->
         <h2 class="text-primary" style="margin-top: 30px; font-weight: bold; background-color: yellow; padding: 5px;">SolidWorks Projects</h2>
-        <div class="projects-row">
-            <div class="project-item">
-                <img src="img/Assem1.JPG" alt="Power Loom">
-                <a href="video/vd.mp4"><i class="fas fa-search-plus"></i> Power Loom</a>
-            </div>
-            <div class="project-item">
-                <img src="img/spoon.JPG" alt="Spoon">
-                <a href="video/name.mp4"><i class="fas fa-search-plus"></i> Spoon</a>
-            </div>
-            <div class="project-item">
-                <img src="img/exam1.JPG" alt="Practice">
-                <a href="video/vd3.mp4"><i class="fas fa-search-plus"></i> Practice</a>
-            </div>
-            <div class="project-item">
-                <img src="img/try.JPG" alt="Walking Robot">
-                <a href="video/vd4.mp4"><i class="fas fa-search-plus"></i> Walking Robot</a>
-            </div>
-            <div class="project-item">
-                <img src="img/Assem5.JPG" alt="Peeling Machine">
-                <a href="video/vd5.mp4"><i class="fas fa-search-plus"></i> Peeling Machine</a>
-            </div>
+<div class="projects-container">
+    <button class="scroll-btn left"><i class="fas fa-chevron-left"></i></button>
+
+    <div class="projects-row" id="solidworks-row">
+        <div class="project-item">
+            <img src="img/Assem1.JPG" alt="Power Loom">
+            <a href="video/vd.mp4"><i class="fas fa-search-plus"></i> Power Loom</a>
         </div>
+        <div class="project-item">
+            <img src="img/spoon.JPG" alt="Spoon">
+            <a href="video/name.mp4"><i class="fas fa-search-plus"></i> Spoon</a>
+        </div>
+        <div class="project-item">
+            <img src="img/exam1.JPG" alt="Practice">
+            <a href="video/vd3.mp4"><i class="fas fa-search-plus"></i> Practice</a>
+        </div>
+        <div class="project-item">
+            <img src="img/try.JPG" alt="Walking Robot">
+            <a href="video/vd4.mp4"><i class="fas fa-search-plus"></i> Walking Robot</a>
+        </div>
+        <div class="project-item">
+            <img src="img/Assem5.JPG" alt="Peeling Machine">
+            <a href="video/vd5.mp4"><i class="fas fa-search-plus"></i> Peeling Machine</a>
+        </div>
+    </div>
+
+    <button class="scroll-btn right"><i class="fas fa-chevron-right"></i></button>
+</div>
 
         <!-- Arduino Projects -->
         <h2 class="text-primary" style="margin-top: 50px; font-weight: bold; background-color: yellow; padding: 5px;">Arduino Projects</h2>
