--- a/projects.html
+++ b/projects.html
@@ -87,10 +87,10 @@
 
         <!-- SolidWorks Projects -->
         <h2 class="text-primary" style="margin-top: 30px; font-weight: bold; background-color: yellow; padding: 5px;">SolidWorks Projects</h2>
-<div class="projects-container">
+<div class="projects-container position-relative">
     <button class="scroll-btn left"><i class="fas fa-chevron-left"></i></button>
 
-    <div class="projects-row" id="solidworks-row">
+    <div class="projects-row d-flex gap-3 overflow-auto" id="solidworks-row">
         <div class="project-item">
             <img src="img/Assem1.JPG" alt="Power Loom">
             <a href="video/vd.mp4"><i class="fas fa-search-plus"></i> Power Loom</a>
