--- a/projects.html
+++ b/projects.html
@@ -86,11 +86,11 @@
         </div>
 
         <!-- SolidWorks Projects -->
-        <h2 class="text-primary" style="margin-top: 30px; font-weight: bold; background-color: yellow; padding: 5px;">SolidWorks Projects</h2>
+<h2 class="text-primary" style="margin-top: 30px; font-weight: bold; background-color: yellow; padding: 5px;">SolidWorks Projects</h2>
 <div class="projects-container position-relative">
-    <button class="scroll-btn left"><i class="fas fa-chevron-left"></i></button>
+    <button class="scroll-btn left" id="solid-left"><i class="fas fa-chevron-left"></i></button>
 
-    <div class="projects-row d-flex gap-3 overflow-auto" id="solidworks-row">
+    <div class="projects-row d-flex gap-3 overflow-auto" id="solid-row">
         <div class="project-item">
             <img src="img/Assem1.JPG" alt="Power Loom">
             <a href="video/vd.mp4"><i class="fas fa-search-plus"></i> Power Loom</a>
@@ -113,13 +113,13 @@
         </div>
     </div>
 
-    <button class="scroll-btn right"><i class="fas fa-chevron-right"></i></button>
+    <button class="scroll-btn right" id="solid-right"><i class="fas fa-chevron-right"></i></button>
 </div>
 
-        <!-- Arduino Projects -->
+<!-- Arduino Projects -->
 <h2 class="text-primary" style="margin-top: 50px; font-weight: bold; background-color: yellow; padding: 5px;">Arduino Projects</h2>
 <div class="projects-container position-relative">
-    <button class="scroll-btn left"><i class="fas fa-chevron-left"></i></button>
+    <button class="scroll-btn left" id="arduino-left"><i class="fas fa-chevron-left"></i></button>
 
     <div class="projects-row d-flex gap-3 overflow-auto" id="arduino-row">
         <div class="project-item">
@@ -144,13 +144,13 @@
         </div>
     </div>
 
-    <button class="scroll-btn right"><i class="fas fa-chevron-right"></i></button>
+    <button class="scroll-btn right" id="arduino-right"><i class="fas fa-chevron-right"></i></button>
 </div>
 
 <!-- Python Projects -->
 <h2 class="text-primary" style="margin-top: 50px; font-weight: bold; background-color: yellow; padding: 5px;">Python Projects</h2>
 <div class="projects-container position-relative">
-    <button class="scroll-btn left"><i class="fas fa-chevron-left"></i></button>
+    <button class="scroll-btn left" id="python-left"><i class="fas fa-chevron-left"></i></button>
 
     <div class="projects-row d-flex gap-3 overflow-auto" id="python-row">
         <div class="project-item">
@@ -159,8 +159,9 @@
         </div>
     </div>
 
-    <button class="scroll-btn right"><i class="fas fa-chevron-right"></i></button>
+    <button class="scroll-btn right" id="python-right"><i class="fas fa-chevron-right"></i></button>
 </div>
+
 
 
     </div>
