--- a/projects.html
+++ b/projects.html
@@ -111,6 +111,10 @@
             <img src="img/Assem5.JPG" alt="Peeling Machine">
             <a href="video/vd5.mp4"><i class="fas fa-search-plus"></i> Peeling Machine</a>
         </div>
+         <div class="project-item">
+            <img src="img/combing.JPG" alt="Combing Machine">
+            <a href="video/vd5.mp4"><i class="fas fa-search-plus"></i> Combing Machine</a>
+        </div>
     </div>
 
     <button class="scroll-btn right" id="solid-right"><i class="fas fa-chevron-right"></i></button>
