--- a/projects.html
+++ b/projects.html
@@ -115,6 +115,10 @@
             <img src="img/combing.JPG" alt="Combing Machine">
             <a href="video/vd5.mp4"><i class="fas fa-search-plus"></i> Combing Machine</a>
         </div>
+         <div class="project-item">
+            <img src="img/Twisting.JPG" alt="Twisting Machine">
+            <a href="video/vd5.mp4"><i class="fas fa-search-plus"></i> Twisting Machine</a>
+        </div>
     </div>
 
     <button class="scroll-btn right" id="solid-right"><i class="fas fa-chevron-right"></i></button>
