--- a/projects.html
+++ b/projects.html
@@ -117,7 +117,7 @@
         </div>
          <div class="project-item">
             <img src="img/Twisting.JPG" alt="Twisting Machine">
-            <a href="video/vd5.mp4"><i class="fas fa-search-plus"></i> Twisting Machine</a>
+            <a href="https://youtu.be/_aCTqMzZ9cQ"><i class="fas fa-search-plus"></i> Twisting Machine</a>
         </div>
     </div>
 
