--- a/projects.html
+++ b/projects.html
@@ -163,7 +163,7 @@
     <div class="projects-row d-flex gap-3 overflow-auto" id="python-row">
         <div class="project-item">
             <img src="img/Face.png" alt="Face Recognition">
-            <a href="https://youtu.be/CE8fcOrJuXg"><i class="fas fa-search-plus"></i> Face Recognition Attendance Software</a>
+            <a href="https://youtube.com/shorts/Jo9PW9NWIH4"><i class="fas fa-search-plus"></i> Face Recognition Attendance Software</a>
         </div>
     </div>
 
