--- a/projects.html
+++ b/projects.html
@@ -132,7 +132,7 @@
     <div class="projects-row d-flex gap-3 overflow-auto" id="arduino-row">
         <div class="project-item">
             <img src="img/car.png" alt="NodeMCu Car">
-            <a href="video/car.mp4"><i class="fas fa-search-plus"></i> NodeMCu Controlled Car</a>
+            <a href="https://youtu.be/oVNwLBNhdjs"><i class="fas fa-search-plus"></i> NodeMCu Controlled Car</a>
         </div>
         <div class="project-item">
             <img src="img/IRsensor.png" alt="Car with IR Sensor">
