--- a/projects.html
+++ b/projects.html
@@ -140,7 +140,7 @@
         </div>
         <div class="project-item">
             <img src="img/Obstacle.jpeg" alt="Obstacle Avoiding Robot">
-            <a href="video/vd.mp4"><i class="fas fa-search-plus"></i> Obstacle Avoiding Robot</a>
+            <a href="https://youtu.be/sgghnucFdhg"><i class="fas fa-search-plus"></i> Obstacle Avoiding Robot</a>
         </div>
         <div class="project-item">
             <img src="img/linefollowing.jpeg" alt="Line Following Robot">
