--- a/projects.html
+++ b/projects.html
@@ -136,7 +136,7 @@
         </div>
         <div class="project-item">
             <img src="img/IRsensor.png" alt="Car with IR Sensor">
-            <a href="video/sensor.mp4"><i class="fas fa-search-plus"></i> Car with IR Sensor</a>
+            <a href="https://youtu.be/CE8fcOrJuXg"><i class="fas fa-search-plus"></i> Car with IR Sensor</a>
         </div>
         <div class="project-item">
             <img src="img/Obstacle.jpeg" alt="Obstacle Avoiding Robot">
