--- a/projects.html
+++ b/projects.html
@@ -164,6 +164,7 @@
         <div class="project-item">
             <img src="img/Face.png" alt="Face Recognition">
             <a href="https://youtube.com/shorts/Jo9PW9NWIH4"><i class="fas fa-search-plus"></i> Face Recognition Attendance Software</a>
+            <a href="https://github.com/GaurabBadu/Face-Recognition-using-MTCNN-Facenet-in-Python"><i class="fas fa-search-plus"></i> Face Recognition Attendance Software</a>
         </div>
     </div>
 
