--- a/experience.html
+++ b/experience.html
@@ -69,6 +69,26 @@
 
                 <div class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp" data-wow-delay="0.2s">
                     <div class="service-item p-4">
+                        <div class="attachment-badge mb-3" style="
+            background-color: #f8d7da; /* Light reddish background for visibility */
+            color: #721c24; /* Dark red text */
+            padding: 5px 10px;
+            border-radius: 5px;
+            font-weight: bold;
+            display: inline-block;
+            margin-bottom: 10px !important;
+            border: 1px solid #f5c6cb;
+        ">
+            Industrial Attachment
+            <a href="path/to/Statement.pdf" target="_blank" style="
+                color: #721c24;
+                text-decoration: underline;
+                margin-left: 10px;
+                font-size: 0.9em;
+            ">
+                (View Statement <i class="fas fa-external-link-alt"></i>)
+            </a>
+        </div>
                         <div class="service-content">
                             <div class="mb-4">
                                 <i class="fas fa-industry fa-4x"></i>
