--- a/experience.html
+++ b/experience.html
@@ -70,6 +70,8 @@
                 <div class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp" data-wow-delay="0.2s">
                     <div class="service-item p-4">
                         <div class="attachment-badge mb-3" style="
+                            position: relative;
+                            z-index: 10;
             background-color: #f8d7da; /* Light reddish background for visibility */
             color: #721c24; /* Dark red text */
             padding: 5px 10px;
