--- a/experience.html
+++ b/experience.html
@@ -82,7 +82,7 @@
             border: 1px solid #f5c6cb;
         ">
             Industrial Attachment
-            <a href="path/to/Statement.pdf" target="_blank" style="
+            <a href="intern/Arduino-intern.jpg" target="_blank" style="
                 color: #721c24;
                 text-decoration: underline;
                 margin-left: 10px;
