--- a/about.html
+++ b/about.html
@@ -123,7 +123,9 @@ I completed my Bachelor’s degree in Mechanical Engineering from Thapathali Cam
                                                 <div class="counter-counting mb-3">
                                                     <span class="text-white fs-2 fw-bold" data-toggle="counter-up">5</span>
                                                 </div>
-                                                <h5 class="text-white mb-0">Certificates</h5>
+                                                <h5 class="text-white mb-0">
+                                                    <a href="path/to/certificates.pdf" target="_blank" style="color: inherit; text-decoration: none;">
+                                                    Certificates</h5>
                                             </div>
                                         </div>
                                         <div class="col-6">
