--- a/about.html
+++ b/about.html
@@ -124,7 +124,7 @@ I completed my Bachelor’s degree in Mechanical Engineering from Thapathali Cam
                                                     <span class="text-white fs-2 fw-bold" data-toggle="counter-up">5</span>
                                                 </div>
                                                 <h5 class="text-white mb-0">
-                                                    <a href="path/to/certificates.pdf" target="_blank" style="color: inherit; text-decoration: none;">
+                                                    <a href="img/Certificate.jpeg" target="_blank" style="color: inherit; text-decoration: none;">
                                                     Certificates</h5>
                                             </div>
                                         </div>
