--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
                 <div class="col-xl-6 wow fadeInUp" data-wow-delay="0.2s">
                     <div>
                         <h4 class="text-primary">About Me</h4>
-                        <h1 class="display-5 mb-4">Mechanical Design Engineer</h1>
+                        <h1 class="display-5 mb-4" style="color: #000080;">Mechanical Design Engineer</h1>
                         <p class="mb-5">I was born and raised in the Far Western region of Nepal, where I grew up in a small village surrounded by the sounds of good music and the warmth of family. These threads of family, cricket, and music have shaped my life and continue to inspire me today.
 
 I completed my Bachelor’s degree in Mechanical Engineering from Thapathali Campus, a government university in Nepal. I am a passionate Mechanical Engineer with one year of hands-on industry experience. I’m proficient in SolidWorks and Python programming, and I enjoy applying my technical skills to create innovative and practical solutions.
