--- a/about.html
+++ b/about.html
@@ -70,7 +70,7 @@ I completed my Bachelor’s degree in Mechanical Engineering from Thapathali Cam
                                 <div class="d-flex">
                                     <div class="me-3"><i class="fas fa-file-alt fa-3x fa-3x text-primary"></i></div>
                                     <div>
-                                        <h4>Publications</h4>
+                                        <h4 style="color: #228B22;">Publications</h4>
                                         <p>One published research paper in the journal of Kathmandu Engineering College.</p>
                                     </div>
                                 </div>
