--- a/about.html
+++ b/about.html
@@ -121,7 +121,7 @@ I completed my Bachelor’s degree in Mechanical Engineering from Thapathali Cam
                                                     <i class="fas fa-certificate fa-3x text-white"></i>
                                                 </div>
                                                 <div class="counter-counting mb-3">
-                                                    <span class="text-white fs-2 fw-bold" data-toggle="counter-up">5</span>
+                                                    <span class="text-white fs-2 fw-bold" data-toggle="counter-up"></span>
                                                 </div>
                                                 <h5 class="text-white mb-0">
                                                     <a href="img/Certificate.jpeg" target="_blank" style="color: inherit; text-decoration: none;">
