--- a/about.html
+++ b/about.html
@@ -79,7 +79,7 @@ I completed my Bachelor’s degree in Mechanical Engineering from Thapathali Cam
                                 <div class="d-flex">
                                     <div class="me-3"><i class="fas fa-graduation-cap fa-3x text-primary"></i></div>
                                     <div>
-                                        <h4>Education</h4>
+                                        <h4 style="color: #228B22;">Education</h4>
                                         <p>Thapathali Engineering Campus.</p>
                                         <p>BE Mechanical Engineering</p>
                                     </div>
@@ -89,7 +89,7 @@ I completed my Bachelor’s degree in Mechanical Engineering from Thapathali Cam
                                 <div class="d-flex">
                                     <div class="me-3"><i class="fas fa-heart fa-3x fa-3x text-primary"></i></div>
                                     <div>
-                                        <h4>Interest</h4>
+                                        <h4 style="color: #228B22;">Interest</h4>
                                         <p>Mechanical Design, AI, Robotics, Machine Learning.</p>
                                     </div>
                                 </div>
@@ -98,7 +98,7 @@ I completed my Bachelor’s degree in Mechanical Engineering from Thapathali Cam
                                 <div class="d-flex">
                                     <div class="me-3"><i class="fas fa-certificate fa-3x text-primary"></i></div>
                                     <div>
-                                        <h4>Hobby</h4>
+                                        <h4 style="color: #228B22;">Hobby</h4>
                                         <p>Reading books</p>
                                     </div>
                                 </div>
