--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
     </div> 
     <div class="container-fluid nav-bar sticky-top px-4 py-2 py-lg-0">
-        <nav class="navbar navbar-expand-lg navbar-light">
+        <nav class="navbar navbar-expand-lg **navbar-dark bg-danger**">
             <a href="/" class="navbar-brand p-0">
                 <h1 class="display-6 text-dark"><i class="fas fa-globe text-primary me-3"></i>Gaurab Badu</h1>
             </a>
