--- a/about.html
+++ b/about.html
@@ -217,4 +217,4 @@ I completed my Bachelor’s degree in Mechanical Engineering from Thapathali Cam
 
 <script src="js/main.js"></script>
 </body>
-</html> i want footer removed
+</html> 
