--- a/about.html
+++ b/about.html
@@ -64,6 +64,8 @@
                         <p class="mb-5">I was born and raised in the Far Western region of Nepal, where I grew up in a small village surrounded by the sounds of good music and the warmth of family. These threads of family, cricket, and music have shaped my life and continue to inspire me today.
 
 I completed my Bachelor’s degree in Mechanical Engineering from Thapathali Campus, a government university in Nepal. I am a passionate Mechanical Engineer with one year of hands-on industry experience. I’m proficient in SolidWorks and Python programming, and I enjoy applying my technical skills to create innovative and practical solutions.
+
+                            As a professional work, I have worked on design and facbrication of semi-automatic Banana Fiber Extraction, Combing and Twising Machine at Robotics Association of Nepal, and give training to almost 150 farmers, which was supported by UNDP NEpal.
                         </p>
                         <div class="row g-4">
                             <div class="col-md-6">
