--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@
 
 I completed my Bachelor’s degree in Mechanical Engineering from Thapathali Campus, a government university in Nepal. I am a passionate Mechanical Engineer with one year of hands-on industry experience. I’m proficient in SolidWorks and Python programming, and I enjoy applying my technical skills to create innovative and practical solutions.
 
-                            As a professional work, I have worked on design and facbrication of semi-automatic Banana Fiber Extraction, Combing and Twising Machine at Robotics Association of Nepal, and give training to almost 150 farmers, which was supported by UNDP NEpal.
+                            During my professional work at the Robotics Association of Nepal (RAN), I led the design and fabrication of a semi-automatic Banana Fiber Extraction, Combing, and Twisting Machine. This project, supported by UNDP Nepal, culminated in providing technical training to almost 150 farmers, demonstrating my ability to deliver impactful, real-world engineering solutions.
                         </p>
                         <div class="row g-4">
                             <div class="col-md-6">
