--- a/projects.html
+++ b/projects.html
@@ -92,7 +92,7 @@
 
     <div class="projects-row d-flex gap-3 overflow-auto" id="solid-row">
         <div class="project-item">
-            <img src="img/Assem1.JPG" alt="Power Loom">
+            <img src="img/Power_Loom.JPG" alt="Power Loom">
             <a href="video/vd.mp4"><i class="fas fa-search-plus"></i> Power Loom</a>
         </div>
         <div class="project-item">
