--- a/projects.html
+++ b/projects.html
@@ -86,7 +86,7 @@
         </div>
 
         <!-- SolidWorks Projects -->
-<h2 class="text-primary" style="margin-top: 30px; font-weight: bold; background-color: yellow; padding: 5px;">SolidWorks Projects</h2>
+<h2 class="text-primary" style="margin-top: 30px; font-weight: bold; background-color: yellow; padding: 5px;">Design Projects</h2>
 <div class="projects-container position-relative">
     <button class="scroll-btn left" id="solid-left"><i class="fas fa-chevron-left"></i></button>
 
@@ -125,7 +125,7 @@
 </div>
 
 <!-- Arduino Projects -->
-<h2 class="text-primary" style="margin-top: 50px; font-weight: bold; background-color: yellow; padding: 5px;">Arduino Projects</h2>
+<h2 class="text-primary" style="margin-top: 50px; font-weight: bold; background-color: yellow; padding: 5px;">IOT Projects</h2>
 <div class="projects-container position-relative">
     <button class="scroll-btn left" id="arduino-left"><i class="fas fa-chevron-left"></i></button>
 
