--- a/projects.html
+++ b/projects.html
@@ -87,6 +87,10 @@
 
         <!-- SolidWorks Projects -->
 <h2 class="text-primary" style="margin-top: 30px; font-weight: bold; background-color: yellow; padding: 5px;">Design Projects</h2>
+        <p class="section-intro">
+    A collection of my mechanical design projects created using SolidWorks, including machines, tools, and 3D models.
+</p>
+
 <div class="projects-container position-relative">
     <button class="scroll-btn left" id="solid-left"><i class="fas fa-chevron-left"></i></button>
 
