--- a/projects.html
+++ b/projects.html
@@ -126,6 +126,9 @@
 
 <!-- Arduino Projects -->
 <h2 class="text-primary" style="margin-top: 50px; font-weight: bold; background-color: yellow; padding: 5px;">IOT Projects</h2>
+        <p class="section-intro">
+    Electronics and IoT projects built using Arduino and NodeMCU, focusing on automation, sensors, and robotics.
+</p>
 <div class="projects-container position-relative">
     <button class="scroll-btn left" id="arduino-left"><i class="fas fa-chevron-left"></i></button>
 
