--- a/projects.html
+++ b/projects.html
@@ -160,6 +160,10 @@
 
 <!-- Python Projects -->
 <h2 class="text-primary" style="margin-top: 50px; font-weight: bold; background-color: yellow; padding: 5px;">Python Projects</h2>
+        <p class="section-intro">
+    Python-based applications and experiments, including face recognition, automation, and machine learning tasks.
+</p>
+
 <div class="projects-container position-relative">
     <button class="scroll-btn left" id="python-left"><i class="fas fa-chevron-left"></i></button>
 
