--- a/projects.html
+++ b/projects.html
@@ -86,7 +86,7 @@
         </div>
 
         <!-- SolidWorks Projects -->
-<h2 class="text-primary" style="margin-top: 30px; font-weight: bold; background-color: yellow; padding: 5px;">Design Projects</h2>
+<h2 class="text-primary" style="margin-top: 30px; font-weight: bold; background-color: #ffd500; padding: 5px;">Design Projects</h2>
         <p class="section-intro">
     A collection of my mechanical design projects created using SolidWorks, including machines, tools, and 3D models.
 </p>
