--- a/projects.html
+++ b/projects.html
@@ -112,7 +112,9 @@
             <a href="video/vd5.mp4"><i class="fas fa-search-plus"></i> Peeling Machine</a>
         </div>
          <div class="project-item">
+             <a href="path/to/your/document.pdf" target="_blank" class="main-project-link">
             <img src="img/combing.JPG" alt="Combing Machine">
+             </a>
             <a href="video/vd5.mp4"><i class="fas fa-search-plus"></i> Combing Machine</a>
         </div>
          <div class="project-item">
