--- a/projects.html
+++ b/projects.html
@@ -113,7 +113,7 @@
         </div>
          <div class="project-item">
              <a href="path/to/your/document.pdf" target="_blank" class="main-project-link">
-            <img src="img/combing.JPG" alt="Combing Machine">
+            <img src="img/Combing.pdf" alt="Combing Machine">
              </a>
             <a href="video/vd5.mp4"><i class="fas fa-search-plus"></i> Combing Machine</a>
         </div>
