--- a/projects.html
+++ b/projects.html
@@ -107,9 +107,11 @@
             <img src="img/try.JPG" alt="Walking Robot">
             <a href="video/vd4.mp4"><i class="fas fa-search-plus"></i> Walking Robot</a>
         </div>
-        <div class="project-item">
-            <img src="img/Assem5.JPG" alt="Peeling Machine">
-            <a href="video/vd5.mp4"><i class="fas fa-search-plus"></i> Peeling Machine</a>
+         <div class="project-item">
+             <a href="img/Combing.pdf" target="_blank" class="main-project-link">
+            <img src="img/Extraction.png" alt="Extraction Machine">
+             </a>
+            <a href="video/vd5.mp4"><i class="fas fa-search-plus"></i>Banana FIber Extraction Machine</a>
         </div>
          <div class="project-item">
              <a href="img/Combing.pdf" target="_blank" class="main-project-link">
