--- a/projects.html
+++ b/projects.html
@@ -108,7 +108,7 @@
             <a href="video/vd4.mp4"><i class="fas fa-search-plus"></i> Walking Robot</a>
         </div>
          <div class="project-item">
-             <a href="img/Combing.pdf" target="_blank" class="main-project-link">
+             <a href="img/Extraction.pdf" target="_blank" class="main-project-link">
             <img src="img/Extraction.png" alt="Extraction Machine">
              </a>
             <a href="video/vd5.mp4"><i class="fas fa-search-plus"></i>Banana FIber Extraction Machine</a>
@@ -117,11 +117,11 @@
              <a href="img/Combing.pdf" target="_blank" class="main-project-link">
             <img src="img/combing.JPG" alt="Combing Machine">
              </a>
-            <a href="video/vd5.mp4"><i class="fas fa-search-plus"></i> Combing Machine</a>
+            <a href="video/vd5.mp4"><i class="fas fa-search-plus"></i>Banana Fiber Combing Machine</a>
         </div>
          <div class="project-item">
             <img src="img/Twisting.JPG" alt="Twisting Machine">
-            <a href="https://youtu.be/_aCTqMzZ9cQ"><i class="fas fa-search-plus"></i> Twisting Machine</a>
+            <a href="https://youtu.be/_aCTqMzZ9cQ"><i class="fas fa-search-plus"></i>Banana Fiber Twisting Machine</a>
         </div>
     </div>
 
