--- a/projects.html
+++ b/projects.html
@@ -182,6 +182,26 @@
     <button class="scroll-btn right" id="python-right"><i class="fas fa-chevron-right"></i></button>
 </div>
 
+        <!-- 3d printer design -->
+<h2 class="text-primary" style="margin-top: 50px; font-weight: bold; background-color: yellow; padding: 5px;">3d printer projects</h2>
+        <p class="section-intro">
+    These are the designs i have made in solidworks and 3d-printer.
+</p>
+
+<div class="projects-container position-relative">
+    <button class="scroll-btn left" id="python-left"><i class="fas fa-chevron-left"></i></button>
+
+    <div class="projects-row d-flex gap-3 overflow-auto" id="python-row">
+        <div class="project-item">
+            <img src="img/Face.png" alt="Drone">
+            <a href="https://youtube.com/shorts/Jo9PW9NWIH4"><i class="fas fa-search-plus"></i> Drone</a>
+            <a href="https://github.com/GaurabBadu/Face-Recognition-using-MTCNN-Facenet-in-Python"><i class="fas fa-search-plus"></i> Seed Bombing Drone</a>
+        </div>
+    </div>
+
+    <button class="scroll-btn right" id="python-right"><i class="fas fa-chevron-right"></i></button>
+</div>
+
 
 
     </div>
