--- a/projects.html
+++ b/projects.html
@@ -193,7 +193,7 @@
 
     <div class="projects-row d-flex gap-3 overflow-auto" id="python-row">
         <div class="project-item">
-            <img src="img/Face.png" alt="Drone">
+            <img src="img/seedbombing.PNG" alt="Drone">
             <a href="https://youtube.com/shorts/Jo9PW9NWIH4"><i class="fas fa-search-plus"></i> Drone</a>
             <a href="https://github.com/GaurabBadu/Face-Recognition-using-MTCNN-Facenet-in-Python"><i class="fas fa-search-plus"></i> Seed Bombing Drone</a>
         </div>
