--- a/projects.html
+++ b/projects.html
@@ -193,9 +193,9 @@
 
     <div class="projects-row d-flex gap-3 overflow-auto" id="python-row">
         <div class="project-item">
-            <img src="img/seedbombing.PNG" alt="Drone">
-            <a href="https://youtube.com/shorts/Jo9PW9NWIH4"><i class="fas fa-search-plus"></i> Drone</a>
-            <a href="https://github.com/GaurabBadu/Face-Recognition-using-MTCNN-Facenet-in-Python"><i class="fas fa-search-plus"></i> Seed Bombing Drone</a>
+            <img src="img/camera.JPG" alt="Camera">
+            <a href="https://youtube.com/shorts/Jo9PW9NWIH4"><i class="fas fa-search-plus"></i> Camera Holder</a>
+            <a href="https://github.com/GaurabBadu/Face-Recognition-using-MTCNN-Facenet-in-Python"><i class="fas fa-search-plus"></i> Camera Holder</a>
         </div>
     </div>
 
