--- a/projects.html
+++ b/projects.html
@@ -201,7 +201,7 @@
 
     <div class="projects-row d-flex gap-3 overflow-auto" id="python-row">
         <div class="project-item">
-            <img src="img/camera.JPG" alt="Camera">
+            <img src="img/seedbombing.PNG" alt="Camera">
             <a href="https://youtube.com/shorts/Jo9PW9NWIH4"><i class="fas fa-search-plus"></i> Seed Bombing</a>
             <a href="https://github.com/GaurabBadu/Face-Recognition-using-MTCNN-Facenet-in-Python"><i class="fas fa-search-plus"></i> Seed Bombing</a>
         </div>
