--- a/projects.html
+++ b/projects.html
@@ -207,6 +207,14 @@
         </div>
     </div>
 
+    <div class="projects-row d-flex gap-3 overflow-auto" id="python-row">
+        <div class="project-item">
+            <img src="img/joining part.JPG" alt="Drone Joining Part">
+            <a href="https://youtube.com/shorts/Jo9PW9NWIH4"><i class="fas fa-search-plus"></i> Drone Joining Part</a>
+            <a href="https://github.com/GaurabBadu/Face-Recognition-using-MTCNN-Facenet-in-Python"><i class="fas fa-search-plus"></i> Drone Joining Part</a>
+        </div>
+    </div>
+
     <button class="scroll-btn right" id="python-right"><i class="fas fa-chevron-right"></i></button>
 </div>
 
