--- a/projects.html
+++ b/projects.html
@@ -212,6 +212,13 @@
         </div>
     </div>
 
+        <div class="projects-row d-flex gap-3 overflow-auto" id="python-row">
+        <div class="project-item">
+            <img src="img/clampfinal.JPG" alt="Clamp Final">
+            <a href="https://youtube.com/shorts/Jo9PW9NWIH4"><i class="fas fa-search-plus"></i> Drone Clamping</a>
+        </div>
+    </div>
+
     <button class="scroll-btn right" id="python-right"><i class="fas fa-chevron-right"></i></button>
 </div>
 
