--- a/projects.html
+++ b/projects.html
@@ -219,6 +219,13 @@
         </div>
     </div>
 
+         <div class="projects-row d-flex gap-3 overflow-auto" id="python-row">
+        <div class="project-item">
+            <img src="img/arm.jpeg" alt="Robotic arm">
+            <a href="https://youtube.com/shorts/Jo9PW9NWIH4"><i class="fas fa-search-plus"></i> Robotic Arm</a>
+        </div>
+    </div>
+
     <button class="scroll-btn right" id="python-right"><i class="fas fa-chevron-right"></i></button>
 </div>
 
